objects/Match_Record__c.object
<CustomObject>
    <fields>
        <fullName>Ordering_Practice_Site_Type__c</fullName>
        <label>Ordering Practice Site Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trial Site</fullName>
                </value>
                <value>
                    <fullName>CRO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ordering_Practice_State__c</fullName>
        <formula>Sample_ID__r.Contact__r.Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordering Practice State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Count__c</fullName>
        <inlineHelpText>Number of Outreach Activities where Contact Type is not null</inlineHelpText>
        <label>Outreach Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Email_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Email Read?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Email Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PI__c</fullName>
        <formula>Ordering_Physician_Name__r.PI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>PI?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PODs__c</fullName>
        <label>PODs</label>
        <summaryForeignKey>POD__c.Match_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PTC_Connection_Preference__c</fullName>
        <description>Mirrors same field in Connected Trial Site</description>
        <formula>TEXT(Connected_Trial_Site__r.PTC_Connection_Preference__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTC Connection Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Age__c</fullName>
        <formula>Patient_ID__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Gender__c</fullName>
        <formula>LOWER(TEXT(Patient_ID__r.Gender__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Patient ID</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Match Records</relationshipLabel>
        <relationshipName>Match_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_Initials__c</fullName>
        <formula>Patient_ID__r.Patient_Initials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Last_Name__c</fullName>
        <formula>Patient_ID__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Report__c</fullName>
        <formula>HYPERLINK(&quot;https://portal.guardanthealth.com/download_report/admin_download?request_id=&quot; &amp; Sample_ID__r.Name ,&quot;Download Patient Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Patient Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_to_Connect_with_Pharma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permission to Connect with Pharma?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pharma_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pharma Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Match Records</relationshipLabel>
        <relationshipName>Match_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pharma_PTC_Alert_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharma PTC Alert Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physician_Email__c</fullName>
        <formula>Ordering_Physician_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_phone__c</fullName>
        <formula>Ordering_Physician_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Link_For_MD_text__c</fullName>
        <formula>&quot;https://portal.guardanthealth.com/r/&quot; &amp; Sample_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Link For MD text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Link_for_MD__c</fullName>
        <formula>HYPERLINK(&quot;https://portal.guardanthealth.com/r/&quot; &amp; Sample_ID__r.Name,&quot;https://portal.guardanthealth.com/r/&quot; &amp; Sample_ID__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Link for MD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Sample_ID__c</fullName>
        <label>Portal Sample ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Address__c</fullName>
        <formula>Ordering_Practice_Name__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_City__c</fullName>
        <formula>Ordering_Practice_Name__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_State__c</fullName>
        <formula>Ordering_Practice_Name__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Zip__c</fullName>
        <formula>Ordering_Practice_Name__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <formula>TEXT(Ordering_Physician_Name__r.Preferred_Contact_Method__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Preferred Contact Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PtC_Contact_List__c</fullName>
        <formula>Trial_Name__r.PtC_Contact_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PtC Contact List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualifying_Target_Alterations__c</fullName>
        <label>Qualifying Target Alterations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualifying_Target_Gene__c</fullName>
        <formula>LEFT(  Qualifying_Target_Alterations__c  , FIND(&quot; &quot;, Qualifying_Target_Alterations__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualifying Target Gene</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualifying_Target_Genes__c</fullName>
        <label>Qualifying Target Genes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Match_Rejection__c</fullName>
        <label>Reason for Match Rejection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Informational Letter Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Letter_Template__c</fullName>
        <label>Referral Letter Template</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Referred__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, a referral letter will be sent to MD</inlineHelpText>
        <label>Informed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replied_to_Last_Ditch_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ENT-4687</description>
        <label>Replied to Last Ditch Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replied_to_Outreach_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replied to Outreach Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Status__c</fullName>
        <inlineHelpText>Report Status of parent Sample</inlineHelpText>
        <label>Report Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FINAL</fullName>
                </value>
                <value>
                    <fullName>PROCESSED</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Run_Process__c</fullName>
        <description>Name of the Process to be run. Updated through the scheduled record update tool.</description>
        <label>Run Process</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Sample ID</label>
        <referenceTo>Guardant_360_Sample__c</referenceTo>
        <relationshipLabel>Match Records</relationshipLabel>
        <relationshipName>Match_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_Status__c</fullName>
        <formula>TEXT(Sample_ID__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ENT-4688</description>
        <label>Screened?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <label>Script</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Send_POD_No_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send POD No Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_POD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send POD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Show to Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_to_Pharma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show to Pharma?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Segment__c</fullName>
        <label>Stage Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Show to Customer</fullName>
                </value>
                <value>
                    <fullName>Contact Attempted</fullName>
                </value>
                <value>
                    <fullName>Spoke to MD</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>Permission to Connect with Pharma</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Starred_Notes__c</fullName>
        <description>ENT-8682</description>
        <label>Starred Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ENT-8682</description>
        <label>Starred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Study_Site_Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Site</label>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>Match Records</relationshipLabel>
        <relationshipName>Match_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Status_Reason__c</fullName>
        <label>Sub-Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Enrollment_Sub_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>On Treatment</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                    <label>On Trial</label>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Too Ill/Hospice</fullName>
                </value>
                <value>
                    <fullName>Prior Treatment</fullName>
                </value>
                <value>
                    <fullName>Failed Pharma Screening</fullName>
                    <label>Failed Trial Screening</label>
                </value>
                <value>
                    <fullName>Travel</fullName>
                    <label>Travel Limitations</label>
                </value>
                <value>
                    <fullName>Research Objection</fullName>
                </value>
                <value>
                    <fullName>No Longer Enrolling</fullName>
                </value>
                <value>
                    <fullName>Match Criteria Changed</fullName>
                </value>
                <value>
                    <fullName>MD Engaged</fullName>
                </value>
                <value>
                    <fullName>MD Non-Engaged</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Sent Email</fullName>
                </value>
                <value>
                    <fullName>Future Consideration - On Treatment</fullName>
                </value>
                <value>
                    <fullName>Future Consideration - On Trial</fullName>
                </value>
                <value>
                    <fullName>Future Consideration - Other</fullName>
                </value>
                <value>
                    <fullName>Referred to Trial Site</fullName>
                </value>
                <value>
                    <fullName>Pending Prescription</fullName>
                </value>
                <value>
                    <fullName>Undergoing Screening</fullName>
                </value>
                <value>
                    <fullName>Aware of Trial</fullName>
                    <label>Aware</label>
                </value>
                <value>
                    <fullName>Insurance Coverage</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>Current_Month__c  &amp; &apos; &apos; &amp; TEXT (DAY(TODAY())) &amp; &apos;, &apos; &amp; TEXT (YEAR (TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Notes__c</fullName>
        <formula>Sample_ID__r.Treatment_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Treatment Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Casesafe_ID__c</fullName>
        <formula>Trial_Name__r.Case_Safe_Trial_ID__c</formula>
        <inlineHelpText>Used to enable Webmerge mappings</inlineHelpText>
        <label>Trial Casesafe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Code__c</fullName>
        <formula>Trial_Name__r.Trial_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Contact_Opt_Out__c</fullName>
        <formula>TEXT(Ordering_Physician_Name__r.Pharma_Referrals_Permission_to_Contact__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Trial Contact Opt-Out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Do_Not_Send_IOE__c</fullName>
        <formula>Trial_Name__r.Auto_IOE_Opt_Out__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from field &apos;Auto-IOE Opt-Out&apos; on Trial record. If checked, matches from this trial never generate automated initial outreach emails.</inlineHelpText>
        <label>Trial Do Not Send IOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_Eligibility_Criteria__c</fullName>
        <label>Trial Eligibility Criteria</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Trial_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Name</label>
        <referenceTo>Study__c</referenceTo>
        <relationshipLabel>Match Records</relationshipLabel>
        <relationshipName>Match_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_Sites_List__c</fullName>
        <label>Trial Sites List</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Trial_label__c</fullName>
        <formula>Trial_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field used to prompt processes</description>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Paragraph__c</fullName>
        <label>1st Paragraph</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>YuzuSchedulingLink__c</fullName>
        <label>Yuzu Scheduling Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>x1st_Contact_Type__c</fullName>
        <label>1st Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                    <isActive>false</isActive>
                    <label>Call</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Match Record</label>
    <listViews>
        <fullName>AB_Closed</fullName>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Closed__c</columns>
        <columns>Date_Closed__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Enrollment_Sub_Status__c</columns>
        <columns>Sub_Status_Reason__c</columns>
        <columns>Match_Record_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Closed__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/25/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>Date_Closed__c</field>
            <operation>equals</operation>
            <value>7/24/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>nora</value>
        </filters>
        <label>AB-Closed</label>
    </listViews>
    <listViews>
        <fullName>Admin_View</fullName>
        <columns>NAME</columns>
        <columns>Batch_Check__c</columns>
        <columns>Trial_Name__c</columns>
        <columns>Patient_ID__c</columns>
        <columns>PODs__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Follow_Up_Reminder__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Match_Key__c</field>
            <operation>startsWith</operation>
            <value>SYM</value>
        </filters>
        <label>Admin View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Atha</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>Enrollment_Status__c</columns>
        <columns>Enrollment_Sub_Status__c</columns>
        <columns>Sub_Status_Reason__c</columns>
        <columns>Follow_Up_Reminder__c</columns>
        <columns>Date_Identified__c</columns>
        <columns>NAME</columns>
        <columns>Final_Report_Date__c</columns>
        <columns>Trial_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enrollment_Sub_Status__c</field>
            <operation>equals</operation>
            <value>Referral Letter Sent</value>
        </filters>
        <filters>
            <field>Enrollment_Sub_Status__c</field>
            <operation>equals</operation>
            <value>Pharma in Contact</value>
        </filters>
        <filters>
            <field>Enrollment_Sub_Status__c</field>
            <operation>equals</operation>
            <value>Pending Pharma</value>
        </filters>
        <label>Ref Status V3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Atha2</fullName>
        <columns>Match_ID__c</columns>
        <columns>Date_Identified__c</columns>
        <columns>Date_of_1st_Contact__c</columns>
        <columns>Date_of_Last_Contact__c</columns>
        <columns>Ordering_Practice_Name__c</columns>
        <columns>NAME</columns>
        <columns>Final_Report_Date__c</columns>
        <columns>Show_to_Customer__c</columns>
        <columns>Batch_Check__c</columns>
        <columns>Batch_Push__c</columns>
        <columns>Qualifying_Target_Alterations__c</columns>
        <columns>Qualifying_Target_Genes__c</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Enrollment_Sub_Status__c</columns>
        <columns>Sub_Status_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All-Atha</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Array_Matches_Atha</fullName>
        <columns>Trial_Name__c</columns>
        <columns>NAME</columns>
        <columns>Ordering_Practice_State__c</columns>
        <columns>Closest_Trial_Site__c</columns>
        <columns>Cancer_Type__c</columns>
        <columns>Show_to_Customer__c</columns>
        <columns>Match_Key__c</columns>
        <columns>Trial_Sites_List__c</columns>
        <columns>Trial_Eligibility_Criteria__c</columns>
        <columns>Script__c</columns>
        <columns>Referral_Letter_Template__c</columns>
        <columns>Batch_Check__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trial_Name__c</field>
            <operation>contains</operation>
            <value>Array</value>
        </filters>
        <label>Array Matches-Atha</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BAY101_AF</fullName>
        <columns>NAME</columns>
        <columns>Match_ID__c</columns>
        <columns>Final_Report_Date__c</columns>
        <columns>Date_Identified__c</columns>
        <columns>Match_Algorithm_Version_Number__c</columns>
        <columns>Show_to_Customer__c</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Enrollment_Sub_Status__c</columns>
        <columns>Sub_Status_Reason__c</columns>
        <columns>Qualifying_Target_Alterations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trial_Code__c</field>
            <operation>equals</operation>
            <value>BAY101</value>
        </filters>
        <label>BAY101-AF</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Backfill_Enrolled</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Enrollment_Sub_Status__c</columns>
        <columns>Sub_Status_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enrollment_Sub_Status__c</field>
            <operation>equals</operation>
            <value>Enrolled</value>
        </filters>
        <label>Backfill-Enrolled</label>
    </listViews>
    <listViews>
        <fullName>Backfill_Future_Consideration</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Enrollment_Sub_Status__c</columns>
        <columns>Sub_Status_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enrollment_Status__c</field>
            <operation>equals</operation>
            <value>Future Consideration</value>
        </filters>
        <filters>
            <field>Enrollment_Sub_Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>Backfill-Future Consideration</label>
    </listViews>
    <listViews>
        <fullName>Backfill_Hospice</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Enrollment_Sub_Status__c</columns>
        <columns>Sub_Status_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enrollment_Sub_Status__c</field>
            <operation>equals</operation>
            <value>Ineligible and Reason</value>
        </filters>
        <label>Backfill-Ineligible</label>
    </listViews>
    <listViews>
        <fullName>Backfill_PTC</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Enrollment_Sub_Status__c</columns>
        <columns>Sub_Status_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enrollment_Status__c</field>
            <operation>equals</operation>
            <value>Pharma Permission to Connect</value>
        </filters>
        <label>Backfill-PTC</label>
    </listViews>
    <listViews>
        <fullName>Backfill_Per_Pharma</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Enrollment_Sub_Status__c</columns>
        <columns>Sub_Status_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Status_Reason__c</field>
            <operation>equals</operation>
            <value>Per Pharma</value>
        </filters>
        <label>Backfill-Per Pharma</label>
    </listViews>
    <listViews>
        <fullName>Backfill_Referred</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Enrollment_Sub_Status__c</columns>
        <columns>Sub_Status_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Enrollment_Status__c</field>
            <operation>equals</operation>
            <value>Referred</value>
        </filters>
        <filters>
            <field>Enrollment_Sub_Status__c</field>
            <operation>notEqual</operation>
            <value>With Potential</value>
        </filters>
        <label>Backfill-Referred</label>
    </listViews>
    <listViews>
        <fullName>Batch_Check</fullName>
        <columns>Match_ID__c</columns>
        <columns>NAME</columns>
        <columns>Batch_Check__c</columns>
        <columns>Date_Identified__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Batch Check</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Batch_Push</fullName>
        <columns>NAME</columns>
        <columns>Batch_Push__c</columns>
        <columns>Date_Identified__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Push__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Batch Push</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Blueprint_Matches1</fullName>
        <columns>Date_Identified__c</columns>
        <columns>NAME</columns>
        <columns>Match_Key__c</columns>
        <columns>Closest_Trial_Site__c</columns>
        <columns>Trial_Sites_List__c</columns>
        <columns>Trial_Eligibility_Criteria__c</columns>
        <columns>Script__c</columns>
        <columns>Referral_Letter_Template__c</columns>
        <columns>Pharma_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trial_Name__c</field>
            <operation>startsWith</operation>
            <value>BLU</value>
        </filters>
        <label>Blueprint Matches</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Match Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Match Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BioPharma_must_select_closed_substatus</fullName>
        <active>false</active>
        <description>When a BioPharma SFDC user tries to change a match record&apos;s enrollment status to &apos;Closed&apos;, they must select a valid enrollment sub-status. 6/16/17-deactivated. AB</description>
        <errorConditionFormula>AND (
OR($User.ProfileId=&quot;00e340000015RVt&quot;,$User.ProfileId=&quot;00e34000001CPzp&quot;),
ISPICKVAL(Enrollment_Status__c, &quot;Closed&quot;),
NOT(OR(TEXT(Enrollment_Sub_Status__c) = &quot;Ineligible and Reason&quot;,
TEXT(Enrollment_Sub_Status__c) = &quot;Patient Lost to Follow Up&quot;, 
TEXT(Enrollment_Sub_Status__c) = &quot;Provider Refusal&quot;, 
TEXT(Enrollment_Sub_Status__c) = &quot;Patient Refusal and Reasons&quot;,
TEXT(Enrollment_Sub_Status__c) = &quot;No Response&quot;, 
TEXT(Enrollment_Sub_Status__c) = &quot;Failed Screening&quot;, 
TEXT(Enrollment_Sub_Status__c) = &quot;Enrolled&quot;)))</errorConditionFormula>
        <errorDisplayField>Enrollment_Status__c</errorDisplayField>
        <errorMessage>BioPharma users must select a valid enrollment sub-status when changing a match record&apos;s enrollment status to &apos;Closed&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Intl_Show_to_Customer_Unchecked</fullName>
        <active>false</active>
        <description>Show to Customer is always unchecked for International match records</description>
        <errorConditionFormula>AND(
Ordering_Physician_Name__r.Account.BillingCountry&lt;&gt;&quot;US&quot;,
Show_to_Customer__c=TRUE)</errorConditionFormula>
        <errorDisplayField>Show_to_Customer__c</errorDisplayField>
        <errorMessage>&apos;Show to Customer&apos; must be unchecked if Ordering MD&apos;s account is not in US.</errorMessage>
    </validationRules>
</CustomObject>